fix scrollbar on chromium

--- a/CSS/main-widgets.css
+++ b/CSS/main-widgets.css
@@ -85,34 +85,36 @@ a {
 /* Special Styles */
 
 ::selection {
-  background: #3d4142;
+    background: #3d4142;
 }
 ::-moz-selection { /* Code for Firefox */
-  background: #3d4142;
+    background: #3d4142;
 }
 
 /* === ScrollBar (For TextArea) === */
 .widget-textarea textarea::-webkit-scrollbar {
-  width: var(--aw-scrollbar-width);
-  height: var(--aw-scrollbar-width);
+    width: var(--aw-scrollbar-width);
+    height: var(--aw-scrollbar-width);
 }
 .widget-textarea textarea::-webkit-scrollbar-thumb {
-  background: var(--aw-scrollbar-thumb-bg) !important;
-  border-radius: 16px;
-  border: 3px solid var(--aw-scrollbar-track-bg);
+    background: var(--aw-scrollbar-thumb-bg) !important;
+    border-radius: 16px;
+    border: 3px solid var(--aw-scrollbar-track-bg);
 }
 .widget-textarea textarea::-webkit-scrollbar-thumb:hover {
-  background: var(--aw-scrollbar-thumb-hover) !important;
+    background: var(--aw-scrollbar-thumb-hover) !important;
 }
 .widget-textarea textarea::-webkit-scrollbar-track,
 .widget-textarea textarea::-webkit-scrollbar-corner {
-  background: var(--aw-scrollbar-track-bg) !important;
-  border-radius: 0 8px 8px 0;
+    background: var(--aw-scrollbar-track-bg) !important;
+    border-radius: 0 8px 8px 0;
 }
 /* FireFox Styles */
-.widget-textarea textarea {
-  scrollbar-width: auto;
-  scrollbar-color: var(--aw-scrollbar-thumb-bg) var(--aw-scrollbar-track-bg);
+@-moz-document url-prefix() {
+    .widget-textarea textarea {
+        scrollbar-width: auto;
+        scrollbar-color: var(--aw-scrollbar-thumb-bg) var(--aw-scrollbar-track-bg);
+    }
 }
 
 
